--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.main.allow-circular-references=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=digitialcontent@gmail.com
+spring.mail.password=pmixncjsmolpmafu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
